--- a/_pages/wordpress.html
+++ b/_pages/wordpress.html
@@ -35,7 +35,7 @@ permalink: /wordpress/
 
   <label>
     <input type="checkbox" id="item2">
-    <span>Bloqueie várias tentativas de login (<a href="https://wordpress.org/plugins/login-lockdown/">Login Lockdown</a> ou <a href="https://percioandrade.github.io/wordpress-filters/#protects_login" target="_blank">via functions.php</a> )</span>
+    <span>Bloqueie várias tentativas de login (<a href="https://wordpress.org/plugins/login-lockdown/">Login Lockdown</a> ou via <a href="/wordpress-filters/#protects_login" target="_blank">functions.php</a> )</span>
   </label>
 
   <label>
@@ -45,13 +45,24 @@ permalink: /wordpress/
 
   <label>
     <input type="checkbox" id="item2">
-    <span>Use um e-mail para fazer login ao invés de um nome de usuário (<a href="https://br.wordpress.org/plugins/force-login-with-email">Force Login With Email)</a> ou <a href="">via functions.php</a></span>
+    <span>Use um e-mail para fazer login ao invés de um nome de usuário (<a href="https://br.wordpress.org/plugins/force-login-with-email">Force Login With Email)</a> ou via <a href="/wordpress-filters/#login_mail"> functions.php</a></span>
   </label>
 
   <label>
     <input type="checkbox" id="item2">
-    <span>Altere o endereço da sua página de login (iThemes Security ou diretamente pelo .htaccess)</span>
+    <span>Altere o endereço da sua página de login (<a href="https://wordpress.org/plugins/better-wp-security/" target="_blank">iThemes Security</a> ou diretamente pelo <a href="/wordpress-htaccess/#change_loginurl" target="_blank">.htaccess</a>)</span>
   </label>
+
+  <label>
+    <input type="checkbox" id="item2">
+    <span>Use senhas fortes com letras maiúsculas e minúsculas, números e caracteres especiais em todas as contas (gerador de senhas aleatório ou baseado em palavras)</span>
+  </label>
+
+  <label>
+    <input type="checkbox" id="item2">
+    <span>Remova links para sua página de login (caso exista algum em seu tema)</span>
+  </label>
+
 
   <h2>Painel Administrativo(7)</h2>
 
