--- a/_pages/password.html
+++ b/_pages/password.html
@@ -7,66 +7,79 @@ permalink: /password/
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Password Generator</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
             text-align: center;
+            margin: 0;
         }
         label {
             display: inline-block;
             width: 300px;
-            text-align: left;
         }
         input[type="checkbox"], input[type="text"] {
             margin-bottom: 10px;
         }
+
+        #formContainer {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            text-align: -webkit-auto;
+            font-size: 14px;
+        }
+
+        .form {
+            text-align: left;
+        }
+
+        #buttoGenerate {
+            margin-top: 20px;
+            padding: 10px;
+        }
+
         #generatedPassword {
             font-weight: bold;
             margin-top: 20px;
+            padding: 10px;
         }
         #copyButton {
             margin-top: 10px;
+            padding: 10px;
         }
     </style>
 </head>
 <body>
     <h1>Password Generator</h1>
-    <form>
-        <label for="passwordLength">1 - Password Length:</label>
-        <input type="number" id="passwordLength" min="8" max="64" required><br>
 
-        <label for="includeSymbols">2 - Include Symbols:</label>
-        <input type="checkbox" id="includeSymbols"><br>
+    <div id="formContainer">
+        <form class="form">
+            <label for="passwordLength">Password Length:</label>
+            <input type="number" id="passwordLength" min="8" max="64" value="16" required><br>
 
-        <label for="includeNumbers">3 - Include Numbers:</label>
-        <input type="checkbox" id="includeNumbers"><br>
+            <label for="includeSymbols">Include Symbols:</label>
+            <input type="checkbox" id="includeSymbols" checked><br>
 
-        <label for="includeLowercase">4 - Include Lowercase Characters:</label>
-        <input type="checkbox" id="includeLowercase"><br>
+            <label for="includeNumbers">Include Numbers:</label>
+            <input type="checkbox" id="includeNumbers" checked><br>
 
-        <label for="includeUppercase">5 - Include Uppercase Characters:</label>
-        <input type="checkbox" id="includeUppercase"><br>
+            <label for="includeLowercase">Include Lowercase Characters:</label>
+            <input type="checkbox" id="includeLowercase" checked><br>
 
-        <label for="excludeSimilar">6 - Exclude Similar Characters:</label>
-        <input type="checkbox" id="excludeSimilar"><br>
+            <label for="includeUppercase">Include Uppercase Characters:</label>
+            <input type="checkbox" id="includeUppercase" checked><br>
 
-        <label for="excludeAmbiguous">7 - Exclude Ambiguous Characters:</label>
-        <input type="checkbox" id="excludeAmbiguous"><br>
+            <label for="excludeSimilar">Exclude Similar Characters:</label>
+            <input type="checkbox" id="excludeSimilar" checked><br>
 
-        <label for="noInternet">8 - (do NOT send across the Internet):</label>
-        <input type="checkbox" id="noInternet"><br>
+            <label for="excludeAmbiguous">Exclude Ambiguous Characters:</label>
+            <input type="checkbox" id="excludeAmbiguous" checked><br>
 
-        <label for="selectAutomatically">9 - (select the password automatically):</label>
-        <input type="checkbox" id="selectAutomatically"><br>
+            <button type="button" onclick="generatePassword()" id="buttoGenerate">Generate Password</button>
+        </form>
+    </div>
 
-        <label for="saveSettings">10 - (save all the settings above for later use):</label>
-        <input type="checkbox" id="saveSettings"><br>
-
-        <button type="button" onclick="generatePassword()">Generate Password</button>
-    </form>
-
-    <p id="generatedPassword">Your New Password: </p>
+    <label for="generatedPassword">Your New Password:</label>
+    <input type="text" id="generatedPassword" readonly>
     <button id="copyButton" onclick="copyPassword()">Copy</button>
 
     <script>
@@ -104,21 +117,16 @@ permalink: /password/
                 generatedPassword += characters.charAt(randomIndex);
             }
 
+            // Definir a senha gerada no campo de texto
             const generatedPasswordElement = document.getElementById("generatedPassword");
-            generatedPasswordElement.textContent = "Your New Password: " + generatedPassword;
+            generatedPasswordElement.value = generatedPassword;
+
         }
 
         function copyPassword() {
             const generatedPasswordElement = document.getElementById("generatedPassword");
-            const passwordText = generatedPasswordElement.textContent;
-
-            const textArea = document.createElement("textarea");
-            textArea.value = passwordText;
-
-            document.body.appendChild(textArea);
-            textArea.select();
+            generatedPasswordElement.select();
             document.execCommand("copy");
-            document.body.removeChild(textArea);
 
             alert("Password copied to clipboard!");
         }
