--- a/_pages/wordpress.html
+++ b/_pages/wordpress.html
@@ -276,6 +276,11 @@ permalink: /wordpress/
 
   <label>
     <input type="checkbox" id="item44">
+    <span>Mova o arquivo wp-config.php para um level acima (<a href="/wordpress-toplevel-wpconfig/" target="_blank"></a>(tutorial)</span>
+  </label>
+
+  <label>
+    <input type="checkbox" id="item44">
     <span>Instale e habilite o WP CLI (<a href="https://make.wordpress.org/cli/handbook/guides/installing/" target="_blank">tutorial</a>)</span>
   </label>
 
