--- a/_pages/wordpress.html
+++ b/_pages/wordpress.html
@@ -45,7 +45,7 @@ permalink: /wordpress/
 
   <label>
     <input type="checkbox" id="item4">
-    <span>Use um e-mail para fazer login ao invés de um nome de usuário (<a href="https://br.wordpress.org/plugins/force-login-with-email">Force Login With Email)</a> ou via <a href="/wordpress-filters/#login_mail"> código</a></span>
+    <span>Use um e-mail para fazer login ao invés de um nome de usuário (<a href="https://br.wordpress.org/plugins/force-login-with-email">Force Login With Email</a> ou via <a href="/wordpress-filters/#login_mail"> código</a>)</span>
   </label>
 
   <label>
@@ -276,7 +276,12 @@ permalink: /wordpress/
 
   <label>
     <input type="checkbox" id="item44">
-    <span>Mova o arquivo wp-config.php para um level acima (<a href="/wordpress-toplevel-wpconfig/" target="_blank"></a>(tutorial)</span>
+    <span>Mova o arquivo wp-config.php para um level acima (<a href="/wordpress-toplevel-wpconfig/" target="_blank"></a>tutorial)</span>
+  </label>
+
+  <label>
+    <input type="checkbox" id="item44">
+    <span>Mude o diretório wp-uploads</span>
   </label>
 
   <label>
