--- a/_pages/wordpress.html
+++ b/_pages/wordpress.html
@@ -281,7 +281,7 @@ permalink: /wordpress/
 
   <label>
     <input type="checkbox" id="item44">
-    <span>Mude o diretório wp-uploads</span>
+    <span>Mude o diretório wp-uploads (<a href="/wordpress-change-wpupload/"></a>tutorial>)</span>
   </label>
 
   <label>
