--- a/_pages/wordpress.html
+++ b/_pages/wordpress.html
@@ -35,7 +35,7 @@ permalink: /wordpress/
 
   <label>
     <input type="checkbox" id="item2">
-    <span>Bloqueie várias tentativas de login (<a href="https://wordpress.org/plugins/login-lockdown/">Login Lockdown</a> ou via <a href="/wordpress-filters/#protects_login" target="_blank">código</a>)</span>
+    <span>Bloqueie várias tentativas de login (<a href="https://wordpress.org/plugins/login-lockdown/">Login Lockdown</a> ou via <a href="/wp-filter/#protects_login" target="_blank">código</a>)</span>
   </label>
 
   <label>
@@ -45,12 +45,12 @@ permalink: /wordpress/
 
   <label>
     <input type="checkbox" id="item4">
-    <span>Use um e-mail para fazer login ao invés de um nome de usuário (<a href="https://br.wordpress.org/plugins/force-login-with-email">Force Login With Email</a> ou via <a href="/wordpress-filters/#login_mail"> código</a>)</span>
+    <span>Use um e-mail para fazer login ao invés de um nome de usuário (<a href="https://br.wordpress.org/plugins/force-login-with-email">Force Login With Email</a> ou via <a href="/wp-filter/#login_mail"> código</a>)</span>
   </label>
 
   <label>
     <input type="checkbox" id="item5">
-    <span>Altere o endereço da sua página de login (<a href="https://wordpress.org/plugins/better-wp-security/" target="_blank">iThemes Security</a> ou diretamente pelo <a href="/wordpress-htaccess/#change_loginurl" target="_blank">.htaccess</a>)</span>
+    <span>Altere o endereço da sua página de login (<a href="https://wordpress.org/plugins/better-wp-security/" target="_blank">iThemes Security</a> ou diretamente pelo <a href="/wp-htaccess/#change_loginurl" target="_blank">.htaccess</a>)</span>
   </label>
 
   <label>
@@ -70,24 +70,24 @@ permalink: /wordpress/
 
   <label>
     <input type="checkbox" id="item9">
-    <span>Faça com que a mensagem de erro de login seja genérica (user/pass) (<a href="/wordpress-filters/#wordpress_customerror" target="_blank">código</a>)</span>
+    <span>Faça com que a mensagem de erro de login seja genérica (user/pass) (<a href="/wp-filter/#wordpress_customerror" target="_blank">código</a>)</span>
   </label>
 
   <label>
     <input type="checkbox" id="item10">
-    <span>Desabilite a API REST do WP caso não esteja utilizando. (<a href="https://br.wordpress.org/plugins/disable-json-api/" target="_blank">Disable REST API</a> ou via <a href="/wordpress-filters/#wordpress_disablerestapi" target="_blank">código</a>)</span>
+    <span>Desabilite a API REST do WP caso não esteja utilizando. (<a href="https://br.wordpress.org/plugins/disable-json-api/" target="_blank">Disable REST API</a> ou via <a href="/wp-filter/#wordpress_disablerestapi" target="_blank">código</a>)</span>
   </label>
 
   <label>
     <input type="checkbox" id="item11">
-    <span>Bloqueie o XMLRPC do WP caso não esteja utilizando. via (<a href="/wordpress-htaccess/#wordpress_disablexmlrcp" target="_blank">htaccess</a>)</span>
+    <span>Bloqueie o XMLRPC do WP caso não esteja utilizando. via (<a href="/wp-htaccess/#wordpress_disablexmlrcp" target="_blank">htaccess</a>)</span>
   </label>
 
   <h2>Painel Administrativo</h2>
 
   <label>
     <input type="checkbox" id="item12">
-    <span>Proteja a pasta wp-admin com senha (desbloqueie apenas os arquivos necessários). via (<a href="/wordpress-htaccess/#wordpress_protectadmin" target="_blank">htaccess</a>)</span>
+    <span>Proteja a pasta wp-admin com senha (desbloqueie apenas os arquivos necessários). via (<a href="/wp-htaccess/#wordpress_protectadmin" target="_blank">htaccess</a>)</span>
   </label>
 
   <label>
@@ -141,7 +141,7 @@ permalink: /wordpress/
 
   <label>
     <input type="checkbox" id="item22">
-    <span>Remova a versão do WordPress no tema via (<a href="/wordpress-filters/#remove_wpversion" target="_blank">código</a>)</span>
+    <span>Remova a versão do WordPress no tema via (<a href="/wp-filter/#remove_wpversion" target="_blank">código</a>)</span>
   </label>
 
   <h2>Desenvolvimento</h2>
@@ -249,7 +249,7 @@ permalink: /wordpress/
 
   <label>
     <input type="checkbox" id="item42">
-    <span>Remova ou bloqueie via .htaccess os arquivos license.txt, wp-config-sample.php e readme.html (<a href="/wordpress-htaccess/#protect_files" target="_blank">.htaccess</a>)</span>
+    <span>Remova ou bloqueie via .htaccess os arquivos license.txt, wp-config-sample.php e readme.html (<a href="/wp-htaccess/#protect_files" target="_blank">.htaccess</a>)</span>
   </label>
 
   <label>
@@ -259,39 +259,39 @@ permalink: /wordpress/
 
   <label>
     <input type="checkbox" id="item44">
-    <span>Previna a pesquisa de diretórios (<a href="/wordpress-htaccess/#prevent_index" target="_blank">.htaccess</a>)</span>
+    <span>Previna a pesquisa de diretórios (<a href="/wp-htaccess/#prevent_index" target="_blank">.htaccess</a>)</span>
   </label>
   
   <label>
-    <input type="checkbox" id="item44">
-    <span>Bloqueie spam e bots no WordPress (<a href="https://br.wordpress.org/plugins/stopbadbots/">Block Bad Bots</a>, <a href="https://br.wordpress.org/plugins/wordfence/" target="_blank">WordFance</a> ou <a href="/wordpress-htaccess/#block_bots" target="_blank">.htaccess</a>)</span>
+    <input type="checkbox" id="item45">
+    <span>Bloqueie spam e bots no WordPress (<a href="https://br.wordpress.org/plugins/stopbadbots/">Block Bad Bots</a>, <a href="https://br.wordpress.org/plugins/wordfence/" target="_blank">WordFance</a> ou <a href="/wp-htaccess/#block_bots" target="_blank">.htaccess</a>)</span>
   </label>
   
   <label>
-    <input type="checkbox" id="item44">
-    <span>Bloqueie caracteres suspeitos na URL (<a href="https://br.wordpress.org/plugins/stopbadbots/">Block Bad Bots</a>, <a href="https://br.wordpress.org/plugins/wordfence/" target="_blank">WordFance</a> ou <a href="/wordpress-htaccess/#filter_query" target="_blank">.htaccess</a>)</span>
+    <input type="checkbox" id="item46">
+    <span>Bloqueie caracteres suspeitos na URL (<a href="https://br.wordpress.org/plugins/stopbadbots/">Block Bad Bots</a>, <a href="https://br.wordpress.org/plugins/wordfence/" target="_blank">WordFance</a> ou <a href="/wp-htaccess/#filter_query" target="_blank">.htaccess</a>)</span>
   </label>
 
   <h2>Servidor</h2>
 
   <label>
-    <input type="checkbox" id="item44">
+    <input type="checkbox" id="item47">
     <span>Mova o arquivo wp-config.php para um level acima (<a href="/wordpress-toplevel-wpconfig/" target="_blank"></a>tutorial)</span>
   </label>
 
   <label>
-    <input type="checkbox" id="item44">
+    <input type="checkbox" id="item48">
     <span>Mude o diretório wp-uploads (<a href="/wordpress-change-wpupload/"></a>tutorial>)</span>
   </label>
 
   <label>
-    <input type="checkbox" id="item44">
+    <input type="checkbox" id="item49">
     <span>Instale e habilite o WP CLI (<a href="https://make.wordpress.org/cli/handbook/guides/installing/" target="_blank">tutorial</a>)</span>
   </label>
 
   <label>
-    <input type="checkbox" id="item44">
-    <span>Instale e habilite o mod_sec (<a href="https://www.vivaolinux.com.br/artigo/Integrando-ModSecurity-ao-NGINX-e-Apache" target="_blank">tutorial</a>)</span>
+    <input type="checkbox" id="item50">
+    <span>Instale e habilite o mod_sec (<a href="https://www.linode.com/docs/guides/securing-apache2-with-modsecurity/" target="_blank">tutorial</a>)</span>
   </label>
 
   
