--- a/_pages/wordpress.html
+++ b/_pages/wordpress.html
@@ -277,7 +277,7 @@ permalink: /wordpress/
 
   <label>
     <input type="checkbox" id="item48">
-    <span>Mova o arquivo wp-config.php para um level acima (<a href="/wordpress-toplevel-wpconfig/" target="_blank"></a>tutorial)</span>
+    <span>Mova o arquivo wp-config.php para um level acima (<a href="/wordpress-toplevel-wpconfig/" target="_blank">tutorial</a>)</span>
   </label>
 
   <label>
